Fixed Bernard getting squished

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,28 +66,20 @@
     padding: 0;
     background:#013F85;
   }
-  .column {
+  .column{
     float: left;
     display: inline-block;
     padding: 14px 16px;
-    width: 5%;
+	width: 5%;
     margin : 0 auto;
     position: relative;
     /*padding: 1px;*/
     text-align: center;
   }
+
+
   
-  .columnSelected {
-    float: left;
-    display: inline-block;
-    padding: 14px 16px;
-    width: 5%;
-    margin : 0 auto;
-    position: relative;
-    /*padding: 1px;*/
-    text-align: center;
-    background:#013F85;
-  }
+
 
   .row::after {
     content: "";
@@ -165,8 +157,10 @@ form:hover{
 
 .row{
   text-align: center;
+  width:100%;
+  height:10%;
   margin: 0;
-  padding: 0;
+
   overflow: hidden;
 }
 
